--- a/sandbox.html
+++ b/sandbox.html
@@ -42,22 +42,22 @@ color: white;
 }
 </style>
 <body>
-
-<button style="margin: -20px -50px;  position:relative; top: 14px; left:88.2%;"><i class="fa fa-user-circle-o"></i>&emsp;SIGN IN</button>
-<button style="margin: -20px -50px;  position:relative; top: 14px; left:96%;"><i class="fa fa-user-circle"></i>&emsp;SIGN UP</button>
-<h1 style="text-align:center; font-family:'Ubuntu'; font-size:40px;  margin-top: 160px; "><strong>CHAPCHAP SQL <i class="fa fa-free-code-camp"></i> &nbsp;SANDBOX &emsp;</strong></h1>
+<!--h4 style="font-family:'Ubuntu'; font size:8px;">CHAPCHAP SQL</h4-->
+<button style="margin: -20px -50px; diplay:inline; position:relative; top: 14px; left:88.2%;"><i class="fa fa-user-circle-o"></i>&emsp;SIGN IN</button>
+<a href="signup.html"><button style="margin: -20px -50px; diplay:inline; position:relative; top: 14px; left:96%;"><i class="fa fa-user-circle"></i>&emsp;SIGN UP</button></a>
+<h1 style="text-align:center; font-family:'Ubuntu'; font-size:40px;  margin-top: 160px; "><strong>CHAPCHAP SQL <i class="fa fa-free-code-camp"></i> SANDBOX <sup style="font-size:20px;">*ALPHA</sup> &emsp;</strong></h1>
 <!--h1 style="text-align:center; font-size: 25px; color:black;"> <i class=" fa fa-object-ungroup">&emsp;&emsp;</i> <i class="fa fa-archive"></i> <i class="fa fa-group"></i><i class="fa fa-cubes"></i><i class="fa fa-angle-double-right"></i><i class="fa fa-angle-double-right"></i><i class="fa fa-rocket"></i></h1-->
-<h1 style="font-family:'Ubuntu'; font-size: 16px; color:black; text-align:center;"> ISSUE  COMMIT  COLLABORATE  TEST REVIEW  STAGE  RELEASE </h1>
-<h1 style="text-align:center; font-family:'Ubuntu'; font-size: 25px;">Build & test this library in a controlled & real free environment with an easy to use simuUbuntur.</h1>
+<!--h1 style="font-family:'Ubuntu'; font-size: 16px; color:white; text-align:center;"> ISSUE &emsp; COMMIT &emsp; COLLABORATE &emsp; TEST &emsp; REVIEW  &emsp; STAGE &emsp; RELEASE </h1-->
+<h1 style="text-align:center; font-family:'Ubuntu'; font-size: 25px;">Build & test this library in a controlled & real free environment with this easy to use simulator.</h1>
 <h1 style="text-align:center; font-family:'Ubuntu'; font-size: 25px; ">Develop using ChapChapSQL with this cool simulator in mind & in play.</h1>
 <br><br>
-<button style="font-size: 15px; padding: 12px 12px; margin: -20px -50px;  position:relative; top:60%; left:50%; "><i class="fa fa-hourglass-start"></i>&emsp;GET STARTED</button>
+<a href="signup.html" title="Create an account and test your next big project using ChapChap SQL Sandbox"><button style="font-size: 15px; padding: 12px 12px; margin: -20px -50px;  position:relative; top:60%; left:40%; "><i class="fa fa-hourglass-start fa-spin"></i>&emsp;GET STARTED</button></a>
+<a href="features.html" title="Visit complete features list here"><button style="font-size: 15px; padding: 12px 12px; margin: -20px -50px;  position:relative; top:60%; left:48%">VIEW FEATURES</button></a>
+
 <div id="footer">
   <a href="#" class="text-decoration: none;">Support&emsp;</a>
   <a href="#">Privacy Policy&emsp;</a>
   <p style="display:inline;">Copyright 2017 - All Rights Reserved&emsp;</p>
   <a href="#">Terms & Conditions</a>
 </body>
-
-
 </html>
